# bitmap

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
data/: data.csv
src/: CMakeLists.txt  src.cpp
src/core/: forward_index.cpp  index_manager.cpp  inverted_index.cpp  mapping.cpp
src/core/include/bitmap_index/core/: forward_index.h  index_manager.h  inverted_index.h  mapping.h  types.h
src/io/: csv_parser.cpp
src/io/include/bitmap_index/io/: csv_parser.h
src/utils/: file_util.cpp  string_util.cpp
src/utils/include/bitmap_index/utils/: file_util.h  string_util.h
tests/: CMakeLists.txt
tests/core/: test_forward_index.cpp  test_inverted_index.cpp  test_mapping.cpp
tests/io/: test_csv_parser.cpp
tests/utils/: test_file_util.cpp  test_string_util.cpp
